# inventory-managoat

./: Cargo.toml  README.md  inv.1  inventory_managoat.1  test.sh
cli/: Cargo.toml
cli/src/: main.rs
manager/: Cargo.toml
manager/src/: lib.rs
