[package]
name = "inventory_managoat"
version = "0.1.0"
authors = ["jojolepro <jojolepro@jojolepro.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
prettytable-rs = "0.8.0"
manager = { path = "../manager" }
dirs = "2.0.2"
humantime = "1.3.0"
serde_json = "1.0.44"
structopt = "0.3.7"

