[package]
name = "inv"
version = "0.2.0"
authors = ["jojolepro <jojolepro@jojolepro.com>"]
edition = "2018"
description = """
A Simple Command Line Inventory Manager.
Prevent food waste and never lose track of your items!
"""
keywords = ["inventory", "manager", "inv"]
repository = "https://github.com/jojolepro/inventory-managoat"
license = "Apache-2.0"
exclude = ["doc"]

[dependencies]
prettytable-rs = "0.8.0"
manager = { path = "../manager" }
dirs = "2.0.2"
humantime = "1.3.0"
serde_json = "1.0.44"
structopt = "0.3.7"

