[package]
name = "manager"
version = "0.1.0"
authors = ["jojolepro <jojolepromain@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.99", features = ["derive"] }
csv = "1.1.1"
derive_builder = "0.7.2"

