[package]
name = "manager"
version = "0.1.0"
authors = ["jojolepro <jojolepro@jojolepro.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
csv = "1.1.1"
derive_builder = "0.9.0"
humantime = "1.3.0"

